--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "TriPlan",
+  "name": "triplan",
   "version": "1.0.0",
+  "scripts": {
+    "start": "node index.js"
+  },
   "devDependencies": {
     "browserify": "^4.1.5",
     "grunt": "^0.4.5",
     "grunt-browserify": "^2.1.0"
+  },
+  "dependencies": {
+    "express": "^4.4.1"
   }
 }
