--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "triplan",
+  "description": "Trip Planner",
   "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:rysenko/triplan.git"
+  },
   "scripts": {
     "start": "node index.js"
   },
